@@ -53,6 +53,7 @@
     <li><a href="rdoc/classes/Roda/RodaPlugins/Static.html">static</a>: Adds support for serving static files using Rack::Static.</li>
     <li><a href="rdoc/classes/Roda/RodaPlugins/Streaming.html">streaming</a>: Adds ability to stream responses.</li>
     <li><a href="rdoc/classes/Roda/RodaPlugins/SymbolViews.html">symbol_views</a>: Allows match blocks to return template name symbols, uses the template view as the response body.</li>
+    <li><a href="rdoc/classes/Roda/RodaPlugins/TimestampPublic.html">timestamp_public</a>: Adds support for serving files in the public directory, with paths that change based on file modification time.</li>
     <li><a href="rdoc/classes/Roda/RodaPlugins/ViewOptions.html">view_options</a>: Allows for setting view options on a per-request basis.</li>
   </ul></li>
   <li>View Helpers: <ul>
