@@ -1,3 +1,7 @@
+= master
+
+* Add timestamp_public plugin for serving static files with paths that change based on modify timestamp (jeremyevans)
+
 = 3.1.0 (2017-10-13)
 
 * Make set_layout_locals and set_view_locals in branch_locals plugin work when the other is not called (jeremyevans)
